--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body{
 #title{
     position:fixed;
     margin: 0;
-    height: 39vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -208,9 +208,10 @@ body{
     width: 100%;
     position: relative;
     display: flex;
+    margin-top: 34vh;
     height: auto;
     flex-direction: column;
-    margin-top: 39vh;
+    
 }
 
 #container-3{
