--- a/style.css
+++ b/style.css
@@ -22,107 +22,103 @@
 }
 
 @font-face{
-    font-family: 'CGaramond—Light';
-    src: url(fonts/CormorantGaramond-Light.ttf);
+    font-family: 'NHaas-Medium';
+    src: url(fonts/NeueHaasDisplay-Mediu.ttf);
     font-weight: normal;
     font-style: normal;   
 }
-/* PARAGRAPH STYLES */
 
-.NHaas-R{
-    font-family: 'NHaas-Roman';
-    font-size: 45px;
-    text-transform: uppercase;
-    background-color: white;
-    color: black;
+@font-face{
+    font-family: 'Ortica';
+    src: url(fonts/Ortica-Light.otf);
+    font-weight: normal;
+    font-style: normal;   
 }
 
-.NHaas-R-30{
-    font-family: 'NHaas-Roman';
-    font-size: 25px;
-    background-color: white;
-    color: black;
-}
+/* ------ */
 
-.CGaramond-L{
-    font-family: 'CGaramond—Light';
-    font-size: 50px;
-    text-transform: uppercase;
-    background-color: white;
-    color: black;
-    
-}
-
-.CGaramond-L-35{
-    font-family: 'CGaramond—Light';
-    font-size: 25px;
-    text-transform: uppercase;
-    background-color: white;
-    color: black;
-}
-
-#sub-title{
-    font-family: 'CGaramond—Light';
-    font-size: 33px;
-    text-transform: uppercase;
-    margin: 0;
-    padding-bottom: 1vh;
-    padding-top: 1vh;
-}
-
-#text{
-    font-family: 'NHaas-Roman';
-    font-size: 20px;
-    background-color: white;
-    color: black;
-    margin: 0;
-    width: 80vh;
-}
-
-.italic {
-    font-family: 'NHaas-Roman-Italic';   
-}
-
-#numbers{
-    font-family: 'CGaramond—Light';
-    font-size: 20px;
-    font-style: normal; 
-    font-variant-numeric: normal;
-    background-color: white;
-    color: black;
-    margin: 0;
-    width: 3vh;
-    font-variant-numeric: lining-nums;
-
-}
-
-#text-names{
-    font-family: 'NHaas-Roman';
-    font-size: 15px;
-    background-color: white;
-    color: black;
-    margin: 0;
-    padding-left: 15vh;
-    width: 60vh;
-}
-
-#keywords{
-    font-family: 'NHaas-Roman';
-    font-size: 18px;
-    color: white;
-    margin: 0;
-}
-
-/* ------- */
 
 body{
     display: flex;
     margin: 0px;  
     flex-direction: column;
     overflow: scroll;
-    overflow-x: hidden;
+    overflow-x: hidden;    
+}
 
-    
+/* STYLES */
+
+.title1 {
+    font-family: 'Ortica';
+    box-sizing: border-box;  
+    z-index: 2;
+    margin: 0;
+    color: white;
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
+.title2 {
+    font-family: 'NHaas-Medium';
+    box-sizing: border-box;  
+    z-index: 2;
+    margin: 0;
+    color: white;
+    text-transform: uppercase;
+    font-size: 30px;
+}
+
+.text-1 {
+    font-family: 'NHaas-Roman';
+    font-size: 24px;
+    box-sizing: border-box;  
+    color: white;  
+}
+
+.text-2 {
+    font-family: 'NHaas-Medium';
+    font-size: 22px;
+    box-sizing: border-box;  
+    text-transform: uppercase;
+    color: white;  
+}
+
+.subtitle{
+    font-family: 'Ortica';
+    color: white;
+    text-transform: uppercase;
+    font-size: 22px;
+}
+
+.text-3{
+    font-family: 'NHaas-Roman';
+    font-size: 19px;
+    color: white;  
+}
+
+.text-3-italic{
+    font-family: 'NHaas-Roman-Italic';
+    font-size: 19px;
+    color: white;   
+}
+
+.text-4{
+    font-family: 'NHaas-Medium';
+    font-size: 18px;
+    color: white;  
+    text-transform: uppercase;
+}
+
+.numbers{
+    font-family: 'Ortica';
+    font-family: 19px;
+}
+
+#keywords{
+    font-family: 'NHaas-Roman';
+    font-size: 18px;
+    color: black;
+    margin: 0;
 }
 
 /* BACKGROUND */
@@ -149,279 +145,380 @@ body{
 /* TITLE */
 
 #title{
-    position:fixed;
-    margin: 0;
-    height: 42vh;
+    position: fixed;
     display: flex;
+    top: 0;
+    height: 34vh;
+    margin: 0;
     flex-direction: column;
-    width: 100%;
-    z-index: 2;
-    }
+    box-sizing: border-box;
+}
 
 #container-1{
-    height: 5vh;
-    margin-top: 0;
-    background-color: white;
-    margin-bottom: 0;
+    background-color: black;
     width:20vh ;
-    margin-left:35vh ;
-    }
-#title-1{
-    margin: 0;
-    width: 45vh;
-    padding-left: 3vh;
-    margin-left: 15vh;
-    height: 8vh;
-    }
-#title-2{
-    height: 8vh;
-    margin: 0;
-    width: 120vh;
-    padding-left: 3vh;
-    margin-left: 15vh;
-    }
-#title-3{
-    height: 8vh;
-    margin: 0;
-    padding-left: 18vh;
-    width: 100vh;
-    }
-#title-4{
-    height: 8vh;
-    margin: 0;
-    padding-left: 3vh;
-    margin-left: 15vh;
-    width: 150vh;
-    }
-#container-2{
     height: 5vh;
-    margin-top: 0;
-    background-color: white;
-    margin-bottom: 0;
-    width:40vh ;
-    margin-left:5vh ;
+    margin-left:55vh ;   
+}
+
+#title-1{
+    background-color: black;
+    width: 65vh;
+    height: 6vh;
+    padding-left: 2vh;
+    margin-left: 15vh;
+}
+
+#title-2{
+    background-color: black;
+    width: 120vh;
+    height: 6vh;
+    padding-left: 2vh;
+    margin-left: 15vh;
+}
+
+#title-3{
+    background-color: black;
+    width: 100vh;
+    height: 6vh;
+    padding-left: 2vh;
+    margin-left: 15vh;
+}
+
+#title-4{
+    background-color: black;
+    width: 150vh;
+    height: 6vh;
+    padding-left: 17vh;
+    margin: 0;
+}
+
+#container-2{
+    background-color: black;
+    width:45vh ;
+    height: 5vh;
+    margin-left:10vh ;   
 }
 
 /* SUMÁRIO */
 
 #main-container{
-    width: 100%;
-    position: relative;
-    overflow:hidden;
-    display: flex;
     height: auto;
+    width: 100%;
+    display: flex;
     flex-direction: column;
-    margin-top: 41vh;
+    margin-top: 33vh;
 }
 
 #container-3{
+    background-color: black;
+    width:60vh ;
     height: 5vh;
-    background-color: white;
-    margin-bottom: 0;
-    width:80vh ;
-    margin-left:5vh;
+    margin-left:10vh ;   
 }
 
 #container-4{
+    background-color: black;
+    width:15vh ;
     height: 5vh;
-    background-color: white;
-    margin-bottom: 0;
-    width:20vh ;
-    margin-left:20vh;
+    margin-left:18vh ;   
 }
 
 #container-5{
+    background-color: black;
     margin: 0;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    background-color: white;
-    width: 120vh;
-}
-    
-#title-5{
-        height: auto;
-        margin-top:0;
-        width: 100vh;
-        margin-left: 15vh;
-        margin-bottom: 0;
-}
-
-#title-6{
-    height: auto;
-    margin-top:0;
-    width: 100vh;
-    margin-left: 4vh;
-    margin-bottom: 0;
+    width: 83vh;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
 }
 
 #container-6{
+    background-color: black;
     margin: 0;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    margin-left: 15vh;
-    background-color: white;
-    width: 120vh;
-    }
+    width: 75vh;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
+}
 
 #container-7{
+    background-color: black;
+    width:15vh ;
     height: 5vh;
-    background-color: white;
-    margin-bottom: 0;
-    width:70vh ;
-    margin-left:35vh;
+    margin-left:45vh ;   
 }
 
 #container-8{
-    height: 5vh;
-    background-color: white;
+    background-color: black;
+    margin-left: 25vh;
+    margin-top: 0;
     margin-bottom: 0;
-    width:75vh ;
-    margin-left:45vh;
+    width: 59vh;
+    padding-left: 2vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
 }
 
-/* PROPÓSITO */
-
 #container-9{
-    height: auto;
-    background-color: white;
-    width: 140vh;
-    padding-left: 15vh;
+    background-color: black;
+    margin-left: 25vh;
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 70vh;
+    padding-left: 2vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
 }
 
 #container-10{
-    margin: 0;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    margin-left: 20vh;
-    background-color: white;
-    width: 85vh;
+    background-color: black;
+    margin-left: 25vh;
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 40vh;
+    padding-left: 2vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
 }
 
 #container-11{
+    background-color: black;
+    width:15vh ;
+    height: 5vh;
+    margin-left:35vh ;   
+}
+
+#container-12{
+    background-color: black;
     margin: 0;
-    height: 10vh;
-    margin-left: 40vh;
-    background-color: white;
-    width: 85vh;
+    width: 72vh;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
+}
+
+#container-13{
+    background-color: black;
+    margin: 0;
+    width: 88vh;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
+}
+
+#container-14{
+    background-color: black;
+    margin: 0;
+    width: 65vh;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh;
+}
+
+#container-15{
+    background-color: black;
+    width:55vh ;
+    height: 5vh;
+    margin-left:40vh ;   
+}
+
+#container-16{
+    background-color: black;
+    width:65vh ;
+    height: 5vh;
+    margin-left:45vh ;   
+}
+
+/* PROPOSITO */
+
+#container-17{
+    background-color: black;
+    width: 130vh ;
+    margin:0;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh; 
+}
+
+#container-18{
+    background-color: black;
+    width: 70vh ;
+    margin-left: 30vh;
+    margin-top: 0;
+    padding-right: 1vh;
+    margin-bottom: 0;
+    line-height: 130%;
+    padding-left: 3vh;
+    padding-top: 1vh;
+    padding-bottom:1vh; 
+}
+
+#container-19{
+    background-color: black;
+    width:75vh ;
+    height: 5vh;
+    margin-left:45vh ;   
+}
+
+#container-20{
+    background-color: black;
+    width:85vh ;
+    height: 5vh;
+    margin-left:45vh ;   
 }
 
 /* OBJECTIVOS */
 
-#container-12{
-    height: auto;
-    background-color: white;
-    width: 65vh;
-    padding-left: 15vh;
-}
-
-#container-13{
-    margin: 0;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    margin-left: 10vh;
-    background-color: white;
-    width: 86vh;
-}
-
-#container-14{
-    height: 5vh;
-    background-color: white;
-    margin-bottom: 0;
-    width:56vh ;
-    margin-left:45vh;
-}
-
-#container-15{
-    height: 5vh;
-    background-color: white;
-    margin-bottom: 0;
-    width:66vh ;
-    margin-left:35vh;
-}
-
-/* METODOLOGIAS */
-
-#container-16{
-    margin: 0;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    margin-left: 10vh;
-    background-color: white;
-    width: 100vh;
-}
-
-#container-17{
-    height: 5vh;
-    background-color: white;
-    width: 40vh;
-    margin-left: 45vh;
-}
-
-#container-18{
-    height: 5vh;
-    background-color: white;
-    width: 30vh;
-    margin-left: 45vh;
-}
-
-/* RESULTADOS */
-
-#container-20{
-    height: auto;
-    background-color: white;
-    width: 100vh;
-    padding-left: 15vh;
-}
-
 #container-21{
-    height: 10vh;
-    background-color: white;
-    width: 50vh;
-    margin-left: 10vh;
+    background-color: black;
+    width: 50vh ;
+    margin:0;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh; 
 }
 
 #container-22{
-    margin: 0;
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    margin-left: 10vh;
-    background-color: white;
-    width: 120vh;
+    background-color: black;
+    width: 70vh ;
+    margin-left: 15vh;
+    margin-top: 0;
+    padding-right: 1vh;
+    margin-bottom: 0;
+    line-height: 130%;
+    padding-left: 3vh;
+    padding-top: 1vh;
+    padding-bottom:1vh; 
 }
 
-/* PALAVRAS-CHAVES */
+#container-23{
+    background-color: black;
+    width:80vh;
+    height: 5vh;
+    margin-left:45vh ;   
+}
+
+#container-24{
+    background-color: black;
+    width:100vh ;
+    height: 5vh;
+    margin-left:40vh ;   
+}
+
+/* METODOLOGIA */
+
+#container-25{
+    background-color: black;
+    width: 70vh ;
+    margin-left: 25vh;
+    margin-top: 0;
+    padding-right: 1vh;
+    margin-bottom: 0;
+    line-height: 130%;
+    padding-left: 3vh;
+    padding-top: 1vh;
+    padding-bottom:1vh; 
+}
+
+#container-26{
+    background-color: black;
+    width:30vh ;
+    height: 5vh;
+    margin-left:65vh ;   
+}
+
+#container-27{
+    background-color: black;
+    width:20vh ;
+    height: 5vh;
+    margin-left:65vh ;   
+}
+
+/* -- -- */
+#container-28{
+    background-color: black;
+    width: 67vh ;
+    margin:0;
+    height: 5vh;
+    padding-left: 18vh;
+    padding-top: 1vh;
+    padding-bottom:1vh; 
+}
+
+
+#container-29{
+    background-color: black;
+    width: 50vh ;
+    line-height: 130%;
+    padding-left: 3vh;
+    font-family: 'NHaas-Light';
+    padding-bottom: 2vh;
+    font-size: 15px;
+    color: white;
+    height: auto;
+    margin-left:15vh ;   
+}
+
+p{margin: 0;}
+
+/* KEYWORDS*/
 
 #scroll-container {
-    height: 165vh;
+    height: auto;
+    width: 100%;
     overflow: hidden;
     position: fixed;
     z-index: 3;
-    
 }
   
-  #scroll-text {
+#scroll-text {
     height: 100%;
     font-size: 20pt;
-    font-family: 'Cormorant Garamond', serif;
     text-align: left;
     
-    /* animation properties */
+/* animation properties */
     -moz-transform: translateY(100%);
     -webkit-transform: translateY(100%);
     transform: translateY(100%);
     
-    -moz-animation: my-animation 9s linear infinite;
-    -webkit-animation: my-animation 9s linear infinite;
-    animation: my-animation 9s linear infinite;
-  }
+    -moz-animation: my-animation 10s linear infinite;
+    -webkit-animation: my-animation 10s linear infinite;
+    animation: my-animation 10s linear infinite;
+}
+
+#scroll-1{
+    margin-left: 120vh ; 
+    margin-bottom: 40vh;
+}
+
+#scroll-2{
+    margin-left: 100vh ; 
+    margin-bottom: 10vh;
+}
+
+#scroll-3{
+    margin-left: 130vh; 
+    margin-bottom: 40vh;
+}
+
+#scroll-4{
+    margin-left: 135vh; 
+    margin-bottom: 30vh;
+}
+
+#scroll-5{
+    margin-left: 100vh; 
+    margin-bottom: 20vh;
+}
   
-  /* for Firefox */
+/* for Firefox */
   @-moz-keyframes my-animation {
     from { -moz-transform: translateY(100%); }
     to { -moz-transform: translateY(-100%); }
   }
   
-  /* for Chrome */
+/* for Chrome */
   @-webkit-keyframes my-animation {
     from { -webkit-transform: translateY(100%); }
     to { -webkit-transform: translateY(-100%); }
@@ -438,23 +535,140 @@ body{
       -webkit-transform: translateY(-100%);
       transform: translateY(-100%);
     }
-  }
+}
 
- #container-23{
+ #container-30{
     height: auto;
     width: 30vh;
-    background-color: black;
+    background-color:white;
     padding-left: 5vh;
     margin: 0;
  }
 
- #container-24{
+ #container-31{
     height: auto;
     width: 25vh;
-    background-color: black;
+    background-color: white;
     padding-left: 5vh;
-    
-    
+}
+
+#container-32{
+    height: auto;
+    width: 15vh;
+    background-color: white;
+    padding-left: 5vh;
+}
+
+#container-33{
+    height: auto;
+    width: 20vh;
+    background-color: white;
+    padding-left: 5vh;
+}
+
+#container-34{
+    height: auto;
+    width: 15vh;
+    background-color: white;
+    padding-left: 5vh;
+}
+
+#container-35{
+    height: auto;
+    width: 20vh;
+    background-color:white;
+    padding-left: 5vh;
+    margin: 0;
  }
 
+/* ------------------------------------------------------------ */
 
+@media screen and (max-width: 750px) {
+    
+    #main-container{
+        /* overflow-x: scroll; */
+        width: 100%;
+    }
+   
+    .title1, .title2 {
+      font-size: 22px;
+    }
+
+    #title-1, #title-2, #title-3, #title-4, #container-1, #container-2, #container-3, #container-4, #container-7, #container-11, #container-15, #container-16, #container-19, #container-20, #container-26, #container-27, #container-28 {
+        height: 4vh;
+    }
+
+    #title{
+        height: 24vh;
+    }
+
+    #main-container{
+        margin-top: 23vh;
+    }
+
+    #container-8, #container-9, #container-10 {
+        margin-left: 15vh;
+    }
+
+    .text-1, .text-2 {
+        font-size: 18px;
+    }
+
+    .text-3,.text-4, .text-3-italic, #keywords{
+        font-size: 14px;
+
+    }
+   
+    .subtitle{
+        font-size: 16px;
+    }
+   
+    #container-18{
+        width: 60vh;
+        margin-left: 15vh;
+        line-height: 135%;
+    }
+
+    #container-22{
+        width: 60vh;
+        margin-left: 5vh;
+        line-height: 135%;
+    }
+
+    #container-25{
+        width: 60vh;
+        margin-left: 10vh;
+        line-height: 135%;
+    }
+
+    #container-29{
+        font-size: 12px;
+    }
+
+    #scroll-1{
+        margin-left: 50vh ; 
+        margin-bottom: 40vh;
+        
+    }
+
+    #scroll-2{
+        margin-left: 60vh ; 
+        margin-bottom: 10vh;
+    }
+
+    #scroll-3{
+        margin-left: 50vh; 
+        margin-bottom: 40vh;
+    }
+
+    #scroll-4{
+        margin-left: 50vh; 
+        margin-bottom: 30vh;
+    }
+    
+    #scroll-5{
+        margin-left: 60vh; 
+        margin-bottom: 20vh;
+    }
+
+  }
